Rework proto defs, add log types
- Add version suffixes to all types
- Make dsseEnvelope strongly typed at request time
- Add proto defs for types that are persisted to the log
- Use SignatureAndVerifier pair for all signatures
